--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,8 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="0dp"
+        android:layout_weight="20">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/msg_item"
@@ -21,23 +21,35 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="11"
+        android:layout_height="24dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/msg"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_weight="5"
+            android:background="@drawable/edit_shape" >
+            <EditText
+                android:background="#00000000"
+                android:id="@+id/msg"
+                android:layout_marginLeft="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
 
         <Button
             android:id="@+id/send"
+            android:layout_width="1dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="4"
-            android:text="发送" />
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:textSize="10dp"
+            android:text="发送"/>
     </LinearLayout>
 
 </LinearLayout>
