--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,6 +9,44 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/friend_id_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/status_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="5dp"
+            android:text="离线"
+            android:textColor="#988ea9" />
+
+        <ImageView
+            android:id="@+id/status_img"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="5dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/offline" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="20">
 
@@ -21,7 +59,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="24dp"
+        android:layout_height="30dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -32,13 +70,14 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_weight="5"
-            android:background="@drawable/edit_shape" >
+            android:background="@drawable/edit_shape">
+
             <EditText
-                android:background="#00000000"
                 android:id="@+id/msg"
-                android:layout_marginLeft="8dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
+                android:background="#00000000" />
         </LinearLayout>
 
         <Button
@@ -48,8 +87,8 @@
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:textSize="10dp"
-            android:text="发送"/>
+            android:text="发送"
+            android:textSize="10dp" />
     </LinearLayout>
 
 </LinearLayout>
